Fix splitting NPCGiftTastes, Qusets, Dialogues.json

--- a/MultiLanguage/languages/RU/dictionaries/Dialogues.json
+++ b/MultiLanguage/languages/RU/dictionaries/Dialogues.json
@@ -189,9 +189,7 @@
     "I hope you've been practicing your moves... tomorrow is the flower dance!": "Надеюсь, что ты хорошо тренировался... ведь завтра цветочные танцы!^Надеюсь, что ты хорошо тренировалась... ведь завтра цветочные танцы!",
     "Make sure you don't get a heat stroke, dear.": "Смотри чтобы у тебя не случился тепловой удар, дорогой.^Смотри чтобы у тебя не случился тепловой удар, дорогая.",
     "Drink plenty of water and don't overwork yourself.": "Пей много воды и не перенапрягай себя.",
-    "Sorry if I smell... I was sweating all night in the heat.": "Прости, если я плохо пахну... Всю ночь мне было жарко и я вспотел",
-    "__comment": "MISTAKE KEY FEMALE",
-    "Sorry if I smell... I was sweating all night in the heat.": "Прости, если я плохо пахну... Всю ночь мне было жарко и я вспотел|вспотела.",
+    "Sorry if I smell... I was sweating all night in the heat.": "Прости, если я плохо пахну... Мне всю ночь было очень жарко.",
     "It's summer... that means the house is full of flies.": "Лето настало... значит скоро дом наполнится мухами.",
     "Don't worry, I'll take care of them.": "Но не волнуйся, я о них позабочусь.",
     "This weather feels pretty nice after the heat of summer.": "Такая погода то что нужно, после летнего зноя.",
@@ -3545,9 +3543,8 @@
     "Yeah, I know... I'm being a little dramatic.": "Даа, знаю... Я немного драматизирую.",
     "Hmm... I don't really have anything to say. I still don't know you very well.": "Хм... Я действительно не знаю, что сказать. Я до сих пор тебя не очень хорошо знаю.",
     "Hey...": "Привет...",
-    "...Sorry.": "Трудно придумывать новые темы для разговора. Даже когда ты узнаешь человека поближе.",
-    "__comment": "MISTAKE KEY FEMALE",
-    "Hey...#$b$It's hard to think of new things to talk about, sometimes. Even after you know someone.#$e#...Sorry.": "Привет...#$b#Трудно придумывать новые темы для разговора. Даже когда ты узнаешь человека поближе.#$e#...К сожалению.",
+    "It's hard to think of new things to talk about, sometimes. Even after you know someone.": "Трудно придумывать новые темы для разговора. Даже когда ты узнаешь человека поближе.",
+    "...Sorry.": "...К сожалению.",
     "I was so close to screaming at Mom for throwing away my old comic collection... But something stopped me.": "Я был так близко, чтобы накричать на маму, после того как она выбросила мою старую коллекцию комиксов... но что-то меня остановило.",
     "Hmm... with age comes wisdom.": "Хм... с возрастом приходит мудрость.",
     "You came here to see me?": "Ты тут, чтобы увидеть меня?",
@@ -3572,8 +3569,7 @@
     "Oh. Hey.": "Ох. Привет.",
     "I'm Sebastian.": "Я Себастьян.",
     "Hey.": "Привет.",
-    "__comment": "MISTAKE KEY FEMALE",
-    "Hey.#$eUm... need something?": "Привет.#$e#Хм... что-то нужно?",
+    "Um... need something?": "Хм... что-то нужно?",
     "The computer is an amazing invention, isn't it?": "Компьютер-это удивительное изобретение, не правда ли?",
     "Technology is advancing so fast.": "Технологии развиваются так быстро.",
     "Uh, hi.": "Ах, привет.",
