--- a/MultiLanguage/languages/RU/dictionaries/NPCGiftTastes.json
+++ b/MultiLanguage/languages/RU/dictionaries/NPCGiftTastes.json
@@ -58,9 +58,11 @@
   "Thanks.": "Спасибо.",
   "That's a terrible gift.": "Это просто ужасный подарок.",
   "This is probably the worst gift I've ever seen. Thanks a lot.": "Пожалуй это самый худший подарок на свете. Большое спасибо.",
-  "A gift? Hmm...##Do you want something in return?": "Подарок? Эмм...##Ты хочешь получить что-то в замен?",
+  "A gift? Hmm...": "Подарок? Эмм...",
+  "Do you want something in return?": "Ты хочешь получить что-то в замен?",
   "__comment": "Evelyn",
-  "*gasp*... This is absolutely marvelous!##You've made an old lady very happy.": "*вздох*... Это безусловно прекрасно!##Вы сделали старушку очень счастливой.",
+  "*gasp*... This is absolutely marvelous!": "*вздох*... Это безусловно прекрасно!",
+  "You've made an old lady very happy.": "Вы сделали старушку очень счастливой.",
   "Oh my, it looks wonderful! That's very kind of you.": "О да, это очень красиво смотрится! Это очень любезно с вашей стороны.",
   "Um, Where will I put this?": "Хм, а куда я это дену?",
   "...it smells awful.": "...это пахнет ужасно.",
@@ -87,7 +89,8 @@
   "Hey, hey! Now this is really something! Thanks a million, kid.": "Эй, Эй! Теперь это - действительно что-то! Миллион благодарностей, малыш.",
   "You did good with this one, kid. Thanks!": "Ты хорошо с этим справился  в одиночку, малыш. Спасибо!!",
   "This just ain't my thing.": "Это не в моем вкусе.",
-  "Now this is just absolutely despicable.##(Is this some kind of mean joke?)": "Сейчас это просто гадко.##(Это какая-то злая шутка?)",
+  "Now this is just absolutely despicable.": "Сейчас это просто гадко.",
+  "(Is this some kind of mean joke?)": "(Это какая-то злая шутка?)",
   "Thanks, kid.": "Спасибо, малыш.",
   "__comment": "Emily",
   "This gift is fabulous! Thank you so much!": "Этот подарок просто сказочный! Огромное спасибо!",
