--- a/MultiLanguage/languages/RU/dictionaries/Quests.json
+++ b/MultiLanguage/languages/RU/dictionaries/Quests.json
@@ -54,7 +54,7 @@
   "So far, there's no sign of the bottom. How low does it go?": "Шахта уходит ещё глубже. Сколько этажей ещё там этажей?",
   "Reach the bottom of the mine.": "Доберитесь до дна шахты.",
   "The Skull Key": "Ключ-Череп",
-  "You found a strange looking key in the bottom of the mines.": "На самом дне шахты Вы нашли странный ключ. ",
+  "You found a strange looking key in the bottom of the mines.": "На самом дне шахты Вы нашли странный ключ.",
   "Discover the purpose of the Skull Key.": "Узнайте предназначение Ключа-Черепа.",
   "Qi's Challenge": "Вызов Цы",
   "You've been challenged to reach level 25 in the skull cavern. You've been promised a substantial reward if you're successful.": "Вам бросили вызов, достичь 25 уровня в пещере черепов. Если вы преуспеете вам обещали значительное вознаграждение.",
@@ -88,11 +88,15 @@
   "Mayor's \"Shorts\"": "\"Шорты\" Мэра",
   "Mayor Lewis has lost his purple \"shorts\". He's asking you to find and return them... Discreetly.": "Мэр Льюис потерял свои фиолетовые \"шорты\". Он просит Вас найти и вернуть их... Незаметно.",
   "Find and return Mayor Lewis' purple shorts.": "Найти и вернуть фиолетовые шорты Мэра Льюиса.",
-  "You found them... where? ...Oh!...Uhmm...Heh.#$b#There? I have no idea how they could've gotten there...*cough*#$b#This stays between you and me. Got it?$u": "Вы нашли их... где? ...Ох! ...Эммм ...Хех.#$b#Там? Я понятия не имею как они могли там оказаться...*кашляет*#$b#Пусть это останется между нами. Понятно?$u",
+  "You found them... where? ...Oh!...Uhmm...Heh.": "Вы нашли их... где? ...Ох! ...Эммм ...Хех.",
+  "There? I have no idea how they could've gotten there...*cough*": "Там? Я понятия не имею как они могли там оказаться...*кашляет*",
+  "This stays between you and me. Got it?": "Пусть это останется между нами. Понятно?",
   "Pam Is Thirsty": "Жаждущая Пэм",
   "Pam is hankerin' for a pale ale. Regular old beer won't do. You can brew one yourself if you have hops and a keg.": "Пэм очень хочет светлое пиво. Обычное старое пиво не подходит. Вы можете сварить его самостоятельно, если у вас есть хмель и бочонок.",
   "Bring Pam a pale ale.": "Принести Пэм светлое пиво.",
-  "Gimme that. *slurp*... Ahh, that's the stuff.#$b#It's real nice and hoppy... notes of citrus and pine, but with a robust body to keep it grounded.#$b#Thanks, kid. This means a lot to me. I knew I could count on you.$h": "Дай сюда. *глоток*... Ахх, вот это вещь.#$b#Оно очень хорошее и хмельное... Ноты цитруса и сосны, но крепкая основа их отлично смягчает.#$b#Спасибо, пацан. Это очень много значит для меня. Я знала, что могу рассчитывать на тебя.$h",
+  "Gimme that. *slurp*... Ahh, that's the stuff.": "Дай сюда. *глоток*... Ахх, вот это вещь.",
+  "It's real nice and hoppy... notes of citrus and pine, but with a robust body to keep it grounded.": "Оно очень хорошее и хмельное... Ноты цитруса и сосны, но крепкая основа их отлично смягчает.",
+  "Thanks, kid. This means a lot to me. I knew I could count on you.": "Спасибо, пацан. Это очень много значит для меня. Я знала, что могу рассчитывать на тебя.",
   "Crop Research": "Crop Research",
   "Demetrius needs a fresh melon for his research.": "Деметриус нуждается в свежей дыни для его исследования.",
   "Bring Demetrius a melon.": "Принести Деметриусу дыню.",
@@ -104,23 +108,26 @@
   "Cow's Delight": "Коровий восторг",
   "Marnie wants to give her cows a special treat. She's asking for a single bunch of amaranth.": "Марни хочет, чтобы коровы получили специальное угощение. Она просит одну кучу амаранта.",
   "Bring Marnie one bunch of amaranth.": "Принести Марни одну кучу амаранта.",
-  "Oh, the amaranth I asked for! Thank you so much... my cows are going to love this!$h": "Ох, амарант, я его искала! Спасибо тебе большое... моим коровам это понравится!$h",
+  "Oh, the amaranth I asked for! Thank you so much... my cows are going to love this!": "Ох, амарант, я его искала! Спасибо тебе большое... моим коровам это понравится!",
   "Blackberry Basket": "Корзинка для ежевики",
   "It's blackberry season, but Linus can't find his basket! He's asking you to help him find it. He has no idea where it is.": "Сегодня сезон ежевики, но Лайнус не может найти свою корзинку! Он просит вас помочь ему с этим. Он понятия не имеет, где она сейчас находится.",
   "Find Linus' basket and return it to him.": "Найдите корзинку для Лайнуса и верните ему обратно.",
-  "My basket! Thank you. This means a lot to me.$h": "Моя корзинка! Спасибо. Это много значит для меня.$h",
+  "My basket! Thank you. This means a lot to me.": "Моя корзинка! Спасибо. Это много значит для меня.",
   "Carving Pumpkins": "Резьба на тыкве",
   "Caroline wants to carve a pumpking with her daughter. She asked you to bring her one from the farm.": "Кэролайн хочет, чтобы Вы принесли тыкву для её дочери. Она просит принести одну такую с Вашей фермы.",
   "Bring Caroline a pumpkin.": "Принести Кэролайн тыкву.",
-  "Oh, the pumpkin! It's a good one... Abigail will be so happy when she sees this. Thanks, @player!$h": "Ох, тыква! А она хороша... Эбигейл будет так счастлива когда увидит её. Спасибо, @player!$h",
+  "Oh, the pumpkin! It's a good one... Abigail will be so happy when she sees this. Thanks, @player!": "Ох, тыква! А она хороша... Эбигейл будет так счастлива когда увидит её. Спасибо, @player!",
   "Catch A Squid": "Поймать кальмара",
   "Willy is challenging you to catch a squid. He says you can fish them from the ocean on winter nights.": "Для Вилли является сложной задачей поймать кальмара. Он говорит, что его можно поймать в океане зимней ночью.",
   "Bring Willy a squid.": "Принести Вилли кальмара.",
-  "Hey, you did it! Not bad. Not bad at all. I'm impressed.#$b#Winter's a good time to break out the old fishing rod, isn't it?": "Хей, ты сделал это! Не плохо. Совсем не плохо. Я впечатлён.#$b#Зима хорошее время, чтобы сломать старую удочку, не так ли?",
+  "Hey, you did it! Not bad. Not bad at all. I'm impressed.": "Хей, ты сделал это! Не плохо. Совсем не плохо. Я впечатлён.",
+  "Winter's a good time to break out the old fishing rod, isn't it?": "Зима хорошее время, чтобы сломать старую удочку, не так ли?",
   "Clint's Attempt": "Попытка Клинта",
   "Clint wants you to give Emily an amethyst. He wants you to tell her it's from him.": "Клинт хочет, чтобы Вы дали Эмили аметист. Он хочет, чтобы Вы сказали, что он от него.",
   "Bring Emily an Amethyst.": "Отдать Эмили Аметист.",
-  "Oh, my favorite stone! You're so sweet!$h#$b#Huh? It's from who?$u#$b#Oh, you got it at Clint's? Well I don't care where you got it from, it's beautiful! Thank you! *smooch*$h": "Ох, мой любимый камень! Он такой милый!$h#$b#Хмм? А он от кого?$u#$b#Ох, он от Клинта? Ну, мне всеровно где Вы получили его, он прекрасен! Спасибо тебе! *Лижит*$h",
+  "Oh, my favorite stone! You're so sweet!": "Ох, мой любимый камень! Он такой милый!",
+  "Huh? It's from who?": "Хмм? А он от кого?",
+  "Oh, you got it at Clint's? Well I don't care where you got it from, it's beautiful! Thank you! *smooch*": "Ох, он от Клинта? Ну, мне всеровно где Вы получили его, он прекрасен! Спасибо тебе! *Лижит*",
   "A Dark Reagent": "Темный Реагент",
   "The wizard wants you to descend into the mines and fetch him a Void Essence. He needs it for some kind of dark magic.": "Волшебник хочет, чтобы Вы спустились в шахту и принесли ему сущность пустоты. Он нуждается в ней для какой-то темной магии.",
   "Bring Wizard a Void Essence.": "Принести Волшебнику Сущность Пустоты.",
@@ -128,27 +135,32 @@
   "A Favor For Clint": "Одолжение для Клинта",
   "Clint got a new hammer and he wants to test it out on a variety of metals.": "Клинт получил новый молоток, и он хочет проверить его на различные металлы.",
   "Bring Clint an Iron Bar.": "Принести Клинту железный слиток.",
-  "Hey, it's the iron bar I asked for. It looks strong... perfect.#$b#Thanks, @player. I appreciate this.": "Эй, это железный слиток, я искал его. Он выглядет сильным... превосходно.#$b#Спасибо, @player. Благодарю.",
+  "Hey, it's the iron bar I asked for. It looks strong... perfect.": "Эй, это железный слиток, я искал его. Он выглядет сильным... превосходно.",
+  "Thanks, @player. I appreciate this.": "Спасибо, @player. Благодарю.",
   "Robin's Request": "Просьба Робин",
   "Robin wrote to you asking for some hardwood.": "Робин написала Вам, что просит какое-то тяжелое дерево.",
   "Bring Robin 10 pieces of Hardwood.": "Принести Робин 10 кусков тяжелого дерева.",
-  "Oh, you brought it! I know I can always count on you, @player.$h#$b#Mmhmm... This wood is perfect. It's exactly what I need. Thanks!": "Ох, Вы принесли его! Я знала, что всегда могу рассчитывать на вас, @player.$h#$b#Хмхм... Это дерево превосходно. Это именно то, что мне нужно. Спасибо!",
+  "Oh, you brought it! I know I can always count on you, @player.": "Ох, Вы принесли его! Я знала, что всегда могу рассчитывать на вас, @player.",
+  "Mmhmm... This wood is perfect. It's exactly what I need. Thanks!": "Хмхм... Это дерево превосходно. Это именно то, что мне нужно. Спасибо!",
   "Fish Stew": "Тушеная рыба",
   "Gus wants to make fish stew, but he needs an albacore.": "Гас хочет сделать тушеную рыбу, но он нуждается в альбакоре.",
   "Bring Gus an Albacore.": "Принести Гасу Альбакор.",
-  "*sniff*...*sniff*... What's that? Something smells like albacore!#$b#Aha! You brought it! Thanks a million!": "*Нюхает*...*Нюхает*... Что, что? Пахнет чем-то похожим на альбакор!#$b#Аха! Вы принесли его! Миллион раз спасибо!",
+  "*sniff*...*sniff*... What's that? Something smells like albacore!": "*Нюхает*...*Нюхает*... Что, что? Пахнет чем-то похожим на альбакор!",
+  "Aha! You brought it! Thanks a million!": "Аха! Вы принесли его! Миллион раз спасибо!",
   "Fresh Fruit": "Свежий фрукт",
   "Emily wants a taste of spring. She's asking for a fresh apricot.": "Эмили хочет почувствовать вкус весны. Она просит свежий абрикос.",
   "Bring Emily an Apricot.": "Принести Эмили Абрикос.",
-  "Oh... You followed through! Thanks, this looks delicious!$h": "Ох... Вы его нашли! Спасибо, он выгдядет вкусно!$h",
+  "Oh... You followed through! Thanks, this looks delicious!": "Ох... Вы его нашли! Спасибо, он выгдядет вкусно!",
   "Granny's Gift": "Бабушкин подарок",
   "Evelyn wants to surprise her husband with a gift.": "Эвелин хочет удивить своего мужа подарком.",
   "Bring Evelyn a Leek.": "Принести Эвелин лук-порей.",
-  "Oh, thank you, dear. This leek looks delicious. George will be so happy.#$b#He loves when I make eggs with leeks for breakfast.": "Ох, Спасибо тебе, дорогуша. Этот лук-порей выглядет вкусно. Джордж будет так счастлив.#$b#Он любит когда я делаю яйца с луком-порей на завтрак.",
+  "Oh, thank you, dear. This leek looks delicious. George will be so happy.": "Ох, Спасибо тебе, дорогуша. Этот лук-порей выглядет вкусно. Джордж будет так счастлив.",
+  "He loves when I make eggs with leeks for breakfast.": "Он любит когда я делаю яйца с луком-порей на завтрак.",
   "Pierre's Notice": "Объявление Пьера",
   "Pierre will pay \"top coin\" to whoever brings him a plate of sashimi. Apparently he's really craving the stuff.": "Пьер заплатит \"дорогими монетами\" тому кто принесет ему тарелку сашими. По-видимому он действительно его жаждет.",
   "Bring Pierre some Sashimi.": "Принести Пьеру Сашими.",
-  "It's about time! I was starting to get the shakes, I wanted this fish so bad. *munch*... Mmm, now that's good.#$b#Thanks, @player.$h": "Время пришло! Я начинаю трясти, я надеюсь, что эта рыба не такая плохая. *жует*... Ммм, а ничего так.#$b#Спасибо, @player.$h",
+  "It's about time! I was starting to get the shakes, I wanted this fish so bad. *munch*... Mmm, now that's good.": "Время пришло! Я начинаю трясти, я надеюсь, что эта рыба не такая плохая. *жует*... Ммм, а ничего так.",
+  "Thanks, @player.": "Спасибо, @player.",
   "Aquatic Research": "Водные исследования",
   "Demetrius is studying the toxin levels of the local pufferfish. He'd like you to bring him one.": "Деметрий изучает уровень токсина местной рыбы Фугу. Он хотел бы, чтобы Вы принесли ему одну.",
   "Bring Demetrius a Pufferfish.": "Принести Деметрийу рыбу Фугу.",
@@ -156,19 +168,22 @@
   "A Soldier's Star": "Солдатская звезда",
   "Kent wants to give his wife a starfruit for their anniversary.": "Кент хочет дать своей жене звёздный фрукт на свой юбилей.",
   "Bring Kent a Starfruit.": "Принести Кенту звёздный фрукт.",
-  "Hey. Shhh... Don't let Jodi see.#$b#Ah, this looks juicy. She'll love it. Thank you so much.$h": "Эй. Шшш... Не дай Джоди увидить.#$b#Ах, он выглядит сочно. Она его полюбит. Спасибо тебе огромное.$h",
+  "Hey. Shhh... Don't let Jodi see.": "Эй. Шшш... Не дай Джоди увидить.",
+  "Ah, this looks juicy. She'll love it. Thank you so much.": "Ах, он выглядит сочно. Она его полюбит. Спасибо тебе огромное.",
   "Mayor's Need": "Запрос Мэра",
   "Mayor Lewis wants truffle oil. He won't explain what it's for. Maybe it's none of your business.": "Мэр Льюис хочет трюфельное масло. Он не будет объяснять почему. Может это не твое дело.",
   "Bring Lewis a bottle of Truffle Oil.": "Принести Льюису бутылку с Трюфельным маслом.",
-  "You got the oil? Let me see...#$b#It's high quality... very slick. Great. Thank you.": "Ты принес масло? Дай взглянуть...#$b#Оно высокого качества... очень скользкое. Превосходно. Спасибо тебе.",
+  "You got the oil? Let me see...": "Ты принес масло? Дай взглянуть...",
+  "It's high quality... very slick. Great. Thank you.": "Оно высокого качества... очень скользкое. Превосходно. Спасибо тебе.",
   "Wanted: Lobster": "Разыскивается Лобстер",
   "Gus put out a notice requesting a fresh lobster.": "Гас повесил уведомление с просьбой поймать Лобстера.",
   "Bring Gus a Lobster.": "Принести Гасу Лобстера.",
-  "Something smells like fresh lobster. Oh, that's good.$h#$b#Take care, friend.": "Что-то пахнет свежим Лобстером. Ох, это отлично.$h#$b#Береги себя, друг.",
+  "Something smells like fresh lobster. Oh, that's good.": "Что-то пахнет свежим Лобстером. Ох, это отлично.",
+  "Take care, friend.": "Береги себя, друг.",
   "Pam Needs Juice": "Пэм нуждается в соке",
   "Pam's TV Remote is dead. She's having a tough time going back and forth between the couch and the TV dial.": "Пульт от телевизора Пэм покинул этот мир. Она все время ходит взад и вперед между диваном, чтобы переключить канал самостоятельно.",
   "Bring Pam a Battery Pack.": "Принести Пэм батарейный блок.",
-  "Hey, you pulled through with the battery pack! Thanks, kid... You're a life-saver!$h": "Эй, вы принесли батарейный блок! Спасибо, малыш... Ты мой спаситель!$h",
+  "Hey, you pulled through with the battery pack! Thanks, kid... You're a life-saver!": "Эй, вы принесли батарейный блок! Спасибо, малыш... Ты мой спаситель!",
   "Staff Of Power": "Посох могущества",
   "The Wizard is creating a staff of phenomenal power. Who knows what it's for. He needs an iridium bar to finish it.": "Волшебник создает предмет феноменальной мощности. Кто знает, что это может быть. Ему нужен слиток иридия, чтобы закончить дело.",
   "Bring Wizard an Iridium Bar.": "Принести Волшебнику Слиток иридия.",
@@ -176,9 +191,10 @@
   "Catch a Lingcod": "Поймать Терпуг",
   "Willy is challenging you to catch a Lingcod.": "Для Вилли является сложным испытанием поймать Терпуг.",
   "Bring Willy a Lingcod.": "Принести Вилли Терпуг.",
-  "Hey, that's a real lunker! You've certainly got the angler's blood in you.$h": "Эй, Вам реально везет! Внутри Вас безусловно есть кровь рыболова.$h",
+  "Hey, that's a real lunker! You've certainly got the angler's blood in you.": "Эй, Вам реально везет! Внутри Вас безусловно есть кровь рыболова.",
   "Exotic Spirits": "Экзотические Духи",
   "Gus wants to make a Coco-no-no, but he's missing the main ingredient.": "Гас хочет сделать Коко-нет-нет, но пропал главный ингредиент для меню.",
   "Bring Gus a Coconut.": "Принести Гасу Кокос.",
-  "Coconut! Now there's a soothing sight for my winter eyes.$h#$b#It's going to be perfect for my coco-no-no. Thanks!": "Кокос! Теперь есть успокаивающее зрелище для моих зимних глаз.$h#$b#Это будет идеально подходить для моего Коко-нет-нет. Спасибо!"
+  "Coconut! Now there's a soothing sight for my winter eyes.": "Кокос! Теперь есть успокаивающее зрелище для моих зимних глаз.",
+  "It's going to be perfect for my coco-no-no. Thanks!": "Это будет идеально подходить для моего Коко-нет-нет. Спасибо!"
 }
