Fix BETA header, last dictionary update before open beta

--- a/MultiLanguage/languages/RU/dictionaries/Events.json
+++ b/MultiLanguage/languages/RU/dictionaries/Events.json
@@ -336,11 +336,11 @@
   "Hey, it seems to like this place! Hey, um.... Don't you think this farm could use a good dog?": "Эй, мне кажется ему нравится это место! Ты не думаешь , что этой ферме нужна собака?",
   "Well,  @key... You be a good pooch now... okay?": "Ну, @key... Ты же хороший пес... да?",
   "Good morning, Mr. @player!": "Доброе утро, мистер @player!",
-  "Good Morning, Ms. @player!": "Доброе утро, мисс  @player!",
-  "I came by to ask you a favor, since you're such a kind neighbor.": "Я пришла, чтобы попросить тебя об одолжении, раз ты такой добрый сосед.",
-  "You see, I'm trying to train my goats to say 'hello'... but they simply won't pay attention to me unless I have their favorite treat, cave carrots!": "Ты видишь, что я пытаюсь обучить своих коз, сказать 'привет'... но они просто не обращают на меня свое внимание, так как у меня нет их любимого лакомства, пещерной моркови!",
-  "So... since I'm scared of the mines... I thought, well, maybe you would bring me a cave carrot when you have the chance?": "Так... так как я боюсь шахт.... я думаю, может ты принесешь мне одну, если найдешь?",
-  "There's no pressure... but if you want to, just swing by my house between 9:00 AM and 5:00 PM with a cave carrot. You'll make an old girl very happy. Bye.": "Это не обязательно... но если вы будете проходить мимо моего дома, скажем так с  9:00 утра и по 5:00 вечера с пещерной морковью. Ты сделаешь меня очень счастливой.  Пока.",
+  "Good Morning, Ms. @player!": "Доброе утро, мисс @player!",
+  "I came by to ask you a favor, since you're such a kind neighbor.": "Я пришла, чтобы попросить тебя об одолжении, раз ты такой добрый сосед.^Я пришла, чтобы попросить тебя об одолжении, раз ты такая добрая соседка.",
+  "You see, I'm trying to train my goats to say 'hello'... but they simply won't pay attention to me unless I have their favorite treat, cave carrots!": "Видишь ли, я пытаюсь обучить своих коз произносить слово 'привет'. Но они просто не обращают внимание, так как у меня нет их любимого лакомства, пещерной моркови!",
+  "So... since I'm scared of the mines... I thought, well, maybe you would bring me a cave carrot when you have the chance?": "Ну так вот... так как я боюсь шахт... я подумала, может ты принесёшь мне одну, если найдёшь?",
+  "There's no pressure... but if you want to, just swing by my house between 9:00 AM and 5:00 PM with a cave carrot. You'll make an old girl very happy. Bye.": "Это не обязательно... но если что, просто забегай ко мне домой в любое время с 9:00 утра и по 5:00 вечера с пещерной морковью. Ты сделаешь меня очень счастливой. Пока.",
   "My goats go wild over cave carrot... I can't imagine why.": "Мои козы хотят пещерную морковь... я не могу понять по чему.",
   "*puff* ...hi @player! *pant* Whew... that was quite a workout, walking all the way up here.": "*вздох*... привет @player! *тяжелый вздох*Это была хорошая тренировка, иди сюда.",
   "Anyway... I came by to ask if you wanted to have dinner with us tonight!": "В любом случае... я пришла узнать, не поужинаете с нами сегодня!",
