--- a/MultiLanguage/languages/RU/dictionaries/_KeyWords.json
+++ b/MultiLanguage/languages/RU/dictionaries/_KeyWords.json
@@ -24,19 +24,31 @@
   "Decorations": "Украшения",
   "Demolish": "Снос",
   "Animals": "Животные",
-  "__comment Blueprints": "__comment Blueprints",
+ "__comment Blueprints": "__comment Blueprints",
   "Silo": "Силос",
+  "silo": "Силос",
   "Stable": "Конюшня",
+  "stable": "конюшня",
   "Well": "Колодец",
+  "well": "колодец",
   "Coop": "Птичник",
+  "coop": "птичник",
   "Big Coop": "Большой птичник",
+  "big coop": "большой птичник",
   "Deluxe Coop": "Огромный птичник",
+  "deluxe coop": "огромный птичник",
   "Barn": "Хлев",
+  "barn": "хлев",
   "Big Barn": "Большой хлев",
+  "big barn": "большой хлев",
   "Deluxe Barn": "Огромный хлев",
+  "deluxe barn": "огромный хлев",
   "Slime Hutch": "Ферма слизней",
+  "slime hutch": "ферма слизней",
   "Greenhouse": "Теплица",
+  "greenhouse": "теплица",
   "Mine Elevator": "Лифт шахты",
+  "mine elevator": "лифт шахты",
   "Chicken": "Курица",
   "Cow": "Корова",
   "__comment BuffIcon": "__comment BuffIcon",
