--- a/MultiLanguage/languages/RU/dictionaries/_Menus.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Menus.json
@@ -46,10 +46,10 @@
   "Must be deposited at Community Center": "Должен быть отнесён в Общественный Центр",
   "Can't demolish during construction": "Невозможно снести во время строительства",
   "Can't demolish until animals are relocated": "Невозможно снести пока животные внутри",
-  "Okay, I'll start working on your new @key the day after tomorrow. I always take festivals off.": "Хорошо, я преступлю к работе над новым @key завтра. Я всегда отдыхаю во время фестиваля.",
-  "Okay, I'll start working on your @key upgrade the day after tomorrow. I always take festivals off.": "Хорошо, я преступлю к работе над @key завтра. Я всегда отдыхаю во время фестиваля.",
-  "Okay, I'll start working on your new @key first thing tomorrow morning!": "Хорошо, я начну работать над новым @key завтра с утра!",
-  "Okay, I'll start working on your @key upgrade first thing tomorrow morning!": "Хорошо, я начну работать над @key завтра с утра!",
+  "Okay, I'll start working on your new @key the day after tomorrow. I always take festivals off.": "Хорошо, я преступлю к работе над новым @keyT завтра. Я всегда отдыхаю во время фестиваля.",
+  "Okay, I'll start working on your @key upgrade the day after tomorrow. I always take festivals off.": "Хорошо, я преступлю к работе над @keyT завтра. Я всегда отдыхаю во время фестиваля.",
+  "Okay, I'll start working on your new @key first thing tomorrow morning!": "Хорошо, я начну работать над новым @keyT завтра с утра!",
+  "Okay, I'll start working on your @key upgrade first thing tomorrow morning!": "Хорошо, я начну работать над @keyT завтра с утра!",
   "Select a @key to upgrade.": "Выберите @key для обновления.",
   "Choose a location": "Выберите место",
   "Choose a structure to demolish": "Выберите здание для сноса",
@@ -98,7 +98,7 @@
   "Total Earnings: @numberg": "Всего заработано: @numberg",
   "Excellent! We'll get our workers on it tonight. It should be ready for you by tomorrow.": "Отлично! Мы отправим рабочих сегодня ночью. К завтрашнему утру всё уже будет готово.",
   "Repairs the bus that runs to Calico Desert.": "Ремонт автобуса, направляющийся в пустыню Калико.",
-  "Repairs the minecart system that runs between the bus stop, the mountains, and Pelican Town.": "Ремонт системы вагонеток, пролегающая через автобусную остановку, горы и Пеликан Таун.",
+  "Repairs the minecart system that runs between the bus stop, the mountains, and Pelican Town.": "Ремонт системы вагонеток, пролегающую через автобусную остановку, горы и Пеликан-Таун.",
   "Repairs the broken bridge in the mountains.": "Ремонт сломанного моста в горах.",
   "Repairs the old ruins on the farm, turning it into a greenhouse.": "Ремонт старых руин на ферме, переделано в теплицу.",
   "Removes the glimmering boulder near the mine entrance.": "Удаление мерцающий валун перед входом в шахту.",
