--- a/MultiLanguage/languages/RU/dictionaries/_Object.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Object.json
@@ -401,7 +401,7 @@
   "It's going to be cloudy, with gusts of wind throughout the day.": "Будет облачно, лёгкий ветер в течение дня.",
   "Looks like a storm is approaching. Thunder and lightning is expected.": "Похоже надвигается шторм. Ожидаются гром и молнии.",
   "Um... that's odd. My information sheet just says 'null'. This is embarrassing...": "Эм... странно. В моей справке указано 'null'. Как неловко... ",
-  "It's going to be clear and sunny tomorrow... perfect weather for the @key! The event will take place in Pelican Town, starting between @key and @key. Don't be late!": "Завтра будет ясно и солнечно... идеальная погода для @key! Событие будет проходить в Пеликан Тауне, Начало между @key и @key. Не опаздывайте!",
+  "It's going to be clear and sunny tomorrow... perfect weather for the @key! The event will take place in Pelican Town, starting between @key and @key. Don't be late!": "Завтра будет ясно и солнечно... идеальная погода для @key! Событие будет проходить в Пеликан-Тауне, Начало между @key и @key. Не опаздывайте!",
   "It's going to be clear and sunny tomorrow... perfect weather for the @key! The event will take place on the beach, starting between @key and @key. Don't be late!": "Завтра будет ясно и солнечно... идеальная погода для @key! Событие будет проходить на пляже, Начало между @key и @key. Не опаздывайте!",
   "It's going to be clear and sunny tomorrow... perfect weather for the @key! The event will take place in the forest, starting between @key and @key. Don't be late!": "Завтра будет ясно и солнечно... идеальная погода для @key! Событие будет проходить в лесу, Начало между @key и @key. Не опаздывайте!",
   "Expect a few inches of snow tomorrow.": "Ожидайте завтра несколько дюймов снега.",
